spade-tests/src/snapshots/spade_tests__hir_lowering__tests__div_by_non_constant_is_error.snap
---
source: spade-tests/src/hir_lowering.rs
---
fn x(a: int<8>) -> int<8> {
    5 / a
}

error: Division can only be performed on constant powers of two
  ┌─ testinput:2:5
  │
2 │     5 / a
  │     ^^^^^ Division by non-constant value
  │
  = help: Division is generally slow and should be done over multiple cycles.
  = If you are sure you want to divide by a non-constant, use `std::ops::comb_div`
  │
2 │     5 `std::ops::comb_div` a
  │       ~~~~~~~~~~~~~~~~~~~~
